css/style.css
body{
    display:flex;
    flex-direction: column;
    font-family: Roboto, sans-serif;
    margin:0px;
}

.header{
    display: flex;
    flex-direction: column;
    background-color: #1f2937;
    height: 500px;
    padding: 0px 250px;
    
}

.logo{
    font-size: 24px;
    color: #F9FAF8;
    height:200px;
    font-weight: bold;
}
.top-container{
    display:flex;
    justify-content: space-between;
    align-items: flex-start;
    padding: 20px;
    height:100px;

}

h2{
    font-size:48px;
    color:#F9FAF8;
    font-weight: 900px;
    margin:0px;
}

.blue-button{
    background-color:#3882F6;
    color:#F9FAF8;
    border-radius: 8px;
    border: none;
    font-size: 24px;
    text-align: center;
    padding: 10px 20px;
}

h3{
    margin:0px;
}

.section-two{
    display:flex;
    justify-content: space-between;
    padding: 20px;
}
 .left-sides2 p{
    font-size: 18px;
    color:#E5E7EB;
}

.left-links{
    font-size: 18px;
    color:#E5E7EB;
    display: flex;
    gap: 16px;
    list-style-type: none;
    padding:0;
    margin:0;

}

.left-sides2{
    width:450px;
    height: 200px;
}

.image-right{
    width:300px;
    height: auto;
}

.container-sec-3{
    display:flex;
    padding:20px;
    align-items: center;
    flex-direction: column;

}

.card-container{
    padding: 0px 250px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 35px;
    padding: 20px}

.card{
    border-style: solid;
    border-color: #3882F6;
    height:125px;
    width:125px;
    padding:5px;
    border-radius: 10px;
}


.container-quote{
    display:flex;
    padding: 0px 250px;
    flex-direction:column;
    justify-content: center;
    align-items: center;
    background-color: #E5E7EB;
}

.quote{
    font-size:30px;
    color:#1F2937;
    padding:40px;
}
.info{
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
   
}
.reference{
    align-self: flex-end;
    padding: 5px 50px 20px 10px;
    font-size: 20px;
    color: #1F2937;
    font-weight: 900;
}
.card-text{
    display:flex;
    flex-direction: column;
    align-items: center;
    width:100px;
    padding:20px;
}

.footer{
    background-color: #1F2937;
    color: #F9FAF8;
    text-align: center;
    padding:20px;
    font-size: 12px;
}

.container-signup{
    margin: 100px;
    background-color: #3882F6;
    display:flex;
    padding: 30px;
    justify-content: space-between;
    border-radius: 8px;
}

.whitebutton{
    border-style: solid;
    border-radius: 8px;
    border-width: 2px;
    background-color: #3882F6;
    border-color: #E5E7EB;
    color:#E5E7EB;
    padding: 10px 20px;
}

.action{
    color:#E5E7EB;
}

.signup{
    color:#E5E7EB;
    font-size:15px;
}

